--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -2,20 +2,86 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
   <display-name>E-commerce</display-name>
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-    <welcome-file>signup.html</welcome-file>
+    <welcome-file>Home.jsp</welcome-file>
   </welcome-file-list>
   <servlet>
-        <servlet-name>register</servlet-name>
-        <servlet-class>loginRegister.RegisterServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>register</servlet-name>
-        <url-pattern>/RegisterServlet</url-pattern>
-    </servlet-mapping>
+    <servlet-name>loginRegister.Register</servlet-name>
+    <servlet-class>loginRegister.Register</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>loginRegister.Register</servlet-name>
+    <url-pattern>/Register</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>loginRegister.Login</servlet-name>
+    <servlet-class>loginRegister.Login</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>loginRegister.Login</servlet-name>
+    <url-pattern>/Login</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>loginRegister.Logout</servlet-name>
+    <servlet-class>loginRegister.Logout</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>loginRegister.Logout</servlet-name>
+    <url-pattern>/Logout</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>CartOrders.cart</servlet-name>
+    <servlet-class>CartOrders.cart</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>CartOrders.cart</servlet-name>
+    <url-pattern>/cart</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>CartOrders.delete</servlet-name>
+    <servlet-class>CartOrders.delete</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>CartOrders.delete</servlet-name>
+    <url-pattern>/delete</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>CartOrders.orders</servlet-name>
+    <servlet-class>CartOrders.orders</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>CartOrders.orders</servlet-name>
+    <url-pattern>/orders</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>CartOrders.UserCheck</servlet-name>
+    <servlet-class>CartOrders.UserCheck</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>CartOrders.UserCheck</servlet-name>
+    <url-pattern>/UserCheck</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>PlacedOrders.ID</servlet-name>
+    <servlet-class>PlacedOrders.ID</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>PlacedOrders.ID</servlet-name>
+    <url-pattern>/ID</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>PlacedOrders.products</servlet-name>
+    <servlet-class>PlacedOrders.products</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>PlacedOrders.products</servlet-name>
+    <url-pattern>/products</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>SearchDB.ProductSearch</servlet-name>
+    <servlet-class>SearchDB.ProductSearch</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SearchDB.ProductSearch</servlet-name>
+    <url-pattern>/ProductSearch</url-pattern>
+  </servlet-mapping>
 </web-app>
